# ccall

./: CMakeLists.txt  CMakePresets.json  README.md
ccall/: CMakeLists.txt  ccall-linux-x64.asm  ccall-win-x64.asm  main.cpp
include/ccall/: ccall.hpp
native/: ccall-linux-x64.asm  ccall-win-x64.asm
tests/: test.cpp
